--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@repo/ui": "*",
+    "framer-motion": "^11.3.21",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.13.0",
     "react-native-web": "^0.19.10"
   },
   "devDependencies": {
@@ -20,9 +23,12 @@
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.19",
     "babel-plugin-react-native-web": "^0.19.10",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7",
     "typescript": "^5.3.3"
   }
 }
