--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
     "react": "^18.2.0",
     "react-native": "^0.73.1"
   }
