--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@repo/ui": "*",
+    "classnames": "^2.5.1",
     "framer-motion": "^11.3.21",
+    "jotai": "^2.9.1",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
