--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   },
   "devDependencies": {
     "prettier": "^3.1.1",
-    "turbo": "^2.0.3"
+    "turbo": "^2.0.3",
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "packageManager": "yarn@1.22.19",
   "engines": {
